--- a/main.tex
+++ b/main.tex
@@ -81,12 +81,11 @@
 
 \tableofcontents
 
-\chapter{Introduction}
+%\chapter{Introduction}
 
-\input{intro.tex}
+%\input{intro.tex}
 
-\chapter{Basic Introduction to StochSS}
-\label{chapter1}
+
 \input{T1/tutorial1.tex}
 \input{T2/tutorial2.tex}
 \input{T3/tutorial3.tex}
